TODO
* what about trailing data in xp lnk files ?

Checks
* compare environment variables string and unicode string
* compare icon location data string, string and unicode string
  - data string not necessary equal to string in data block, due to expansion of %VAR%

Refactor
* volume information read into separate subfunction
* network share information read into separate subfunction

Debug
* print descriptive name of data_block_signature
* print values of additional extra blocks
  - console properties data block
  - console codepage data block
  - shim layer data block
  - metadata property store data block
  - shell item identifiers list data block
* remaining known folder identifiers in test set

Library
* create API functions to access link information values
* move libbfio handle from io handle to file
* update support check signature (pff)
* move shell item code into libfwsi (check)
* add libfvalue

API
* add functions
  - for shell item
  - for icon location block ?
  - for special and/or known folder identifier

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* update macosx package files
* automated tests

Bindings:
* python
* .net
* java

20110710
* worked on more API functions
* refactored data blocks to separate files

20110707
* added detailed version information
* updated msvscpp files, added VSDebug
* code clean up
* worked on more API functions

20110706
* updated README.mingw
* updated configure
* updated codepage definitions
* updated common, libcstring, libsystem, libuna, libbfio, libfdatetime,
  libfguid,
* added liblnk_get_access_flags_read, liblnk_get_codepage, liblnk_set_codepage
* code clean up
* added tests and examples
* filetime added microseconds precision

20110111
* updated configure.ac
* updated common, libcstring, libsystem, libuna, libbfio, 

20110104
* 2011 update

20101230
* updated msvscpp files
* added unused
* added UTF-16 functions

20101229
* updated configure.ac