@@ -1,4 +1,4 @@
-.Dd July 10, 2011
+.Dd July 11, 2011
 .Dt liblnk 3
 .Os liblnk
 .Sh NAME
