@@ -1,4 +1,4 @@
-.Dd January 4, 2011
+.Dd July 11, 2011
 .Dt lnkinfo
 .Os liblnk
 .Sh NAME
@@ -39,11 +39,30 @@ None
 None
 .Sh EXAMPLES
 .Bd -literal
-# lnkinfo -a file.lnk
-lnkinfo 20090905 (liblnk 20090905, libuna 20090901, libbfio 20090901)
+# lnkinfo Calculator.lnk
+lnkinfo 20110711
 
-Shortcut information:
-.Dl        ...
+Windows Shortcut information:
+	Contains a link target identifier
+	Contains a description string
+	Contains a working directory string
+	Contains an environment variables block
+
+Link information:
+	Creation time			: Aug 10, 2004 16:54:24.000000 UTC
+	Modification time		: Aug 04, 2004 14:00:00.000000 UTC
+	Access time			: Jun 26, 2006 10:36:41.703125 UTC
+	Local path			: C:\WINDOWS\system32\calc.exe
+	Description			: @%SystemRoot%\system32\shell32.dll,-22531
+	Working directory		: C:\WINDOWS\system32
+	Environment variables location	: %SystemRoot%\system32\calc.exe
+
+Distributed link tracking data:
+	Machine identifier		: hostname
+	Droid volume identifier		: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+	Droid file identifier		: 00000000-1111-2222-3333-444444444444
+	Birth droid volume identifier	: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+	Birth droid file identifier	: 00000000-1111-2222-3333-444444444444
 
 .Ed
 .Sh DIAGNOSTICS
